@@ -300,12 +300,17 @@ class TextProgressView(object):
         # correspond reliably to overall command progress
         self.enable_bar = False
 
+    def _avail_width(self):
+        # we need one extra space for terminals that wrap on last char
+        w = osutils.terminal_width() 
+        if w is None:
+            return w
+        else:
+            return w - 1
+
     def _show_line(self, s):
-        # sys.stderr.write("progress %r\n" % s)
-        width = osutils.terminal_width()
+        width = self._avail_width()
         if width is not None:
-            # we need one extra space for terminals that wrap on last char
-            width = width - 1
             s = '%-*.*s' % (width, width, s)
         self._term_file.write('\r' + s + '\r')
 
@@ -348,6 +353,10 @@ class TextProgressView(object):
             return ''
 
     def _format_task(self, task):
+        """Format task-specific parts of progress bar.
+
+        :returns: (text_part, counter_part) both unicode strings.
+        """
         if not task.show_count:
             s = ''
         elif task.current_cnt is not None and task.total_cnt is not None:
@@ -363,21 +372,30 @@ class TextProgressView(object):
             t = t._parent_task
             if t.msg:
                 m = t.msg + ':' + m
-        return m + s
+        return m, s
 
     def _render_line(self):
         bar_string = self._render_bar()
         if self._last_task:
-            task_msg = self._format_task(self._last_task)
+            task_part, counter_part = self._format_task(self._last_task)
         else:
-            task_msg = ''
+            task_part = counter_part = ''
         if self._last_task and not self._last_task.show_transport_activity:
             trans = ''
         else:
             trans = self._last_transport_msg
             if trans:
                 trans += ' | '
-        return (bar_string + trans + task_msg)
+        # preferentially truncate the task message if we don't have enough
+        # space
+        avail_len = self._avail_width()
+        if avail_len is not None:
+            # if terminal width is unknown, don't truncate
+            current_len = len(bar_string) + len(trans) + len(task_part) + len(counter_part)
+            gap = current_len - avail_len
+            if gap > 0:
+                task_part = task_part[:-gap-2] + '..'
+        return (bar_string + trans + task_part + counter_part)
 
     def _repaint(self):
         s = self._render_line()
